# rust-bitcoinsv

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md
.config/: nextest.toml
.github/workflows/: audit.yml  claude.yml  coverage.yml  proptests.yml  tests.yml  unit-tests.yml
.run/: Run getblock.run.xml  Run p2pcat.run.xml  Test rust-bitcoinsv.run.xml
bsv/: Cargo.toml
bsv/proptest-regressions/bitcoin/: proptest_tests.txt
bsv/src/: lib.rs  result.rs
bsv/src/base/: binary.rs  block.rs  hash.rs  header.rs  mod.rs  params.rs  tx.rs  var_int.rs
bsv/src/bitcoin/: address.rs  base58ck.rs  binary.rs  block.rs  crypto.rs  encoding.rs  hash.rs  hash160.rs  header.rs  merkle.rs  mod.rs  params.rs  proptest_tests.rs  rules.rs  script.rs  stress_tests.rs  tx.rs  tx_build.rs  var_int.rs  var_int_edge_tests.rs
bsv/src/bitcoin/script/: base.rs  builder.rs  byte_seq.rs  interpreter.rs  interpreter_context.rs  mod.rs  op.rs  op_codes.rs  signature.rs
bsv/src/bitcoin/tx_templates/: mod.rs  p2pkh_builder.rs
bsv/src/p2p/: channel.rs  config.rs  connection.rs  discovery.rs  envelope.rs  handshake.rs  listener.rs  manager.rs  message.rs  messages.rs  mod.rs  params.rs  peer.rs  peer_store.rs  ping_pong.rs  protocol.rs  stream.rs
bsv/src/p2p/messages/: addr.rs  block.rs  block_locator.rs  headers.rs  inv.rs  merkle_block.rs  messages.rs  mod.rs  msg_header.rs  node_addr.rs  ping.rs  protoconf.rs  reject.rs  send_cmpct.rs  version.rs
bsv/src/util/: amount.rs  mod.rs
bsv/tests/: README.md  p2p_integration_tests.rs
bsv/tests/common/: config.rs  helpers.rs  mod.rs
docs/: changelog.md  dev.md  p2p_batch_1_complete.md  p2p_batch_2_complete.md  p2p_batch_3_complete.md  p2p_batch_4_complete.md  p2p_batch_5_completed.md  p2p_checkpoint_1_foundation.md  p2p_context_mgmt.txt  p2p_design_prompt.md  p2p_implementation_plan.md
examples/: Cargo.toml
examples/src/: getblock.rs  p2pcat.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_merkle_tree.rs  fuzz_p2p_messages.rs  fuzz_script_execution.rs  fuzz_transaction_parsing.rs  fuzz_varint.rs
testdata/corrupted/: README.md
