[package]
name = "bitcoinsv"
version = "0.2.9-alpha"
edition = "2021"
authors = ["Daniel Connolly <daniel@dconnolly.com>"]
repository = "https://github.com/Danconnolly/rust-bitcoinsv"
license-file = "../LICENSE.txt"
readme = "../README.md"
description = "Low-level Bitcoin SV library, focused on infrastructure."
homepage = "https://github.com/Danconnolly/rust-bitcoinsv"
documentation = "https://docs.rs/bitcoinsv/latest/bitcoinsv/"
keywords = ["crypto", "bitcoin-sv"]

[dependencies]
base58 = "0.2.0"
bytes = { version = "1.9.0", features = ["serde"] }
hex = "0.4.3"
log = "0.4.20"
num = "0.4.3"
rand = "0.8.5"      # v0.9.0 is not usable with secp256k1 version 0.30.0 (the latest version)
ring = ">=0.17.12"
ripemd = "0.1.3"
secp256k1 = { version = "0.30.0", features = ["alloc", "rand", "serde"] }
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["std", "serde"] }
hex-literal = "0.4.1"
serde_json = { version = "1.0.108", features = [] }

[lib]
path = "src/lib.rs"

