[package]
name = "bitcoinsv"
version = "0.4.1"
edition = "2021"
authors = ["Daniel Connolly <daniel@dconnolly.com>"]
repository = "https://github.com/Danconnolly/rust-bitcoinsv"
license-file = "../LICENSE.txt"
readme = "../README.md"
description = "Low-level Bitcoin SV library, focused on infrastructure."
homepage = "https://github.com/Danconnolly/rust-bitcoinsv"
documentation = "https://docs.rs/bitcoinsv/latest/bitcoinsv/"
keywords = ["crypto", "bitcoin-sv"]

[dependencies]
base58 = "0.2.0"
bytes = { version = "1.9.0", features = ["serde"] }
hex = "0.4.3"
log = "0.4.20"
num = "0.4.3"
rand = "0.9.0"
ring = ">=0.17.12"
ripemd = "0.1.3"
secp256k1 = { version = "0.31.0", features = ["alloc", "rand", "serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
# P2P module dependencies
async-trait = "0.1"
tokio = { version = "1.41", features = ["net", "sync", "time", "rt", "macros", "fs", "io-util"] }
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["std", "serde"] }
hex-literal = "1.0.0"
serde_json = { version = "1.0.108", features = [] }
proptest = "1.5"
# P2P testing dependencies
tokio = { version = "1.41", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.13"

[lib]
path = "src/lib.rs"

