[package]
name = "bitcoinsv-examples"
version = "0.2.0"
edition = "2021"
authors = ["Daniel Connolly <daniel@dconnolly.com>"]
repository = "https://github.com/Danconnolly/rust-bitcoinsv"
license-file = "../LICENSE.txt"
readme = "../README.md"
description = "Some examples of using the rust-bitcoinsv library"
homepage = "https://github.com/Danconnolly/rust-bitcoinsv"
documentation = "https://docs.rs/bitcoinsv/latest/bitcoinsv/"
keywords = ["crypto", "bitcoin-sv"]

[dependencies]
tokio = { version = "1", features = ["full"] }
bitcoinsv = { path = "../bsv" }
env_logger = "0.10.1"

[[bin]]
name = "p2pcat"
path = "src/p2pcat.rs"


